--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start-plugin": "webpack-dev-server --config webpack.aot.config.js",
     "start-prod": "npm run ngc && npm run webpack-prod && npm run serve",
     "build": "npm run ngc && npm run webpack-prod",
+    "pretest": "npm run build",
+    "test": "karma start karma.config.js",
+    "posttest": "node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
     "deploy": "gh-pages -d dist",
     "webpack": "webpack --config webpack.config.js",
     "webpack-aot": "webpack --config webpack.aot.config.js",
@@ -24,11 +27,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blacksonic/angular2-aot-webpack.git"
-  },
-  "author": {
-    "name": "blacksonic",
-    "email": "soos.gabor86@gmail.com"
+    "url": "git+https://github.com/comfroels/search-content-start.git"
   },
   "license": "ISC",
   "dependencies": {
@@ -56,7 +55,18 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "gh-pages": "0.12.0",
     "http-server": "0.9.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
+    "phantomjs-prebuilt": "^2.1.13",
     "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.7.0",
     "source-map-explorer": "1.3.3",
     "style-loader": "0.13.1",
     "to-string-loader": "1.1.5",
